cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    #? cert issuer; valid opttions: letsencrypt-stating or letsencrypt-production
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #? traefik-specifics
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    #? hajimari-specific (optional) - icon ref: https://materialdesignicons.com/
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    #? external DNS - if need to be accessed via Internet (using CloudFlare)
    #? https://github.com/kubernetes-sigs/external-dns/blob/master/docs/faq.md
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      #? needed for ingress!
      secretName: "traefik-dashboard-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
